--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "html-webpack-plugin": "^5.5.0",
     "path": "^0.12.7",
     "vue": "^3.2.13",
-    "vue-loader": "^17.0.1"
+    "vue-loader": "^17.0.1",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
